add --enable-preview and sourceRelease/testRelease options